--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,6 +1,20 @@
+<% if @tweet.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= @tweet.errors.count %>件のエラーがあります。</h2>
+
+      <ul>
+      <% @tweet.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+ <% end %>
+  
 <%= form_for(@tweet) do |f| %>
     <%= f.label "本文" %>
-    <%= f.text_field :content %>
+    <br>
+    <%= f.text_area :content, :maxlength => "255" %>
+    <br>
     <%= f.submit %>
 <% end %>
 <%= link_to "戻る", tweets_path, class: 'btn btn-default btn-sm btn-success' %>
