--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,9 +2,11 @@
 <!--<p>Find me in app/views/tweets/index.html.erb</p>-->
 <p><%= notice %></p>
 
-<%= form_for(@tweet) do |f| %>
+<%= form_for(@tweet, url: confirm_tweets_path) do |f| %>
     <%= f.label "本文" %>
-    <%= f.text_field :content %>
+    <br>
+    <%= f.text_area :content, :maxlength => "255" %>
+    <br>
     <%= f.submit %>
 <% end %>
 
