--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,39 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <!--<%= link_to "Achieve", root_path, class: "navbar-brand" %>-->
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
+        <ul class="nav navbar-nav navbar-left">
+          <li><%= link_to "ホーム",tweets_path %></li>
+          <li><%= link_to "モーメント",tweets_path %></li>
+          <li><%= link_to "通知",tweets_path %></li>
+          <li><%= link_to "メッセージ",tweets_path %></li>
+          <!--<li class="dropdown">-->
+          <!--  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
+          <!--  <ul class="dropdown-menu">-->
+          <!--    <li><%= link_to "ブログ",tweets_path %></li>-->
+          <!--  </ul>-->
+          <!--</li>-->
+        </ul>
+      </div>  
+      </div>
+    </nav>
 <%= yield %>
-
+  <footer>
+  </footer>
 </body>
 </html>
