--- a/app/views/tweets/confirm.html.erb
+++ b/app/views/tweets/confirm.html.erb
@@ -1,12 +1,13 @@
-<h3>以下の内容で投稿します。</h3>
-<%= form_for(@tweet) do |f| %>
-  <%= f.hidden_field :content %>
-
-  <p>本文:<%= @tweet.content %></p>
-  <%= f.submit "投稿する" %>
-<% end %>
-
-<%= form_for(@tweet, url: tweets_path, method: 'get') do |f| %>
-  <%= f.hidden_field :content %>
-  <%= f.submit "戻る", name: 'back' %>
-<% end %>
+<div class="wrapper col-sm-6 col-sm-offset-3 ">
+  <h4>以下の内容で投稿します。</h4>
+  <%= form_for(@tweet) do |f| %>
+    <%= f.hidden_field :content %>
+    <p>本文：<%= f.label :content, simple_format(h @tweet.content) %></p>
+    <%= f.submit "ツイート", class:'btn btn-default btn-sm btn-primary pull-right' %>
+  <% end %>
+  
+  <%= form_for(@tweet, url: tweets_path, method: 'get') do |f| %>
+    <%= f.hidden_field :content %>
+    <%= link_to "戻る", tweets_path, class: 'btn btn-default btn-sm btn-success' %>
+  <% end %>
+</div>
