--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,20 +1,20 @@
-<% if @tweet.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @tweet.errors.count %>件のエラーがあります。</h2>
-
-      <ul>
-      <% @tweet.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
- <% end %>
+<div class="wrapper col-sm-6 col-sm-offset-3 ">
+  <% if @tweet.errors.any? %>
+      <div id="error_explanation">
+        <h4><%= @tweet.errors.count %>件のエラーがあります。</h4>
   
-<%= form_for(@tweet) do |f| %>
-    <%= f.label "本文" %>
-    <br>
-    <%= f.text_area :content, :maxlength => "255" %>
-    <br>
-    <%= f.submit %>
-<% end %>
-<%= link_to "戻る", tweets_path, class: 'btn btn-default btn-sm btn-success' %>
+        <ul>
+        <% @tweet.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+   <% end %>
+    
+  <%= form_for(@tweet) do |f| %>
+      <%= f.text_area :content, :maxlength => "255", class:"form-control" %>
+      <br>
+      <%= f.submit "ツイート", class:'btn btn-default btn-sm btn-primary pull-right' %>
+  <% end %>
+  <%= link_to "戻る", tweets_path, class: 'btn btn-default btn-sm btn-success' %>
+</div>
