--- a/app/views/tweets/confirm.html.erb
+++ b/app/views/tweets/confirm.html.erb
@@ -8,6 +8,6 @@
   
   <%= form_for(@tweet, url: tweets_path, method: 'get') do |f| %>
     <%= f.hidden_field :content %>
-    <%= link_to "戻る", tweets_path, class: 'btn btn-default btn-sm btn-success' %>
+    <%= f.submit "戻る", class: 'btn btn-default btn-sm btn-success', name: 'back' %>
   <% end %>
 </div>
